--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,11 +1,49 @@
 /* Basic formatting */
 
-* {
+body, html {
  font-size: 25px;
  color: black;
  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#__next {
+ min-height: 100vh;
+/* width: 100%;
+ overflow: hidden; */
+ background-color: #e0e0e0;
+}
+/*
+* > .container-fluid {
+ overflow: hidden;
+} */
+
+.container-fluid {
+ margin: 0;
+}
+
+/* things in the ".sideshow" */
+.sideshow {
+ background-color: black;
+ color: white;
+ z-index: 2;
+}
+
+/* Button for flagbar:*/
+#flagS {
+ top: 0;
+}
+
+#flagS, #codeS {
+ left: 0;
+ position: absolute;
+ font-size: 50px;
+ width: 50px;
+}
+
+/*Button for codebook:*/
+#codeS {
+ bottom: 0;
+}
 
 /*body > *:not(#nav), body:not(#nav), body:not(Table), body :not(Table) {
  max-width: 80%;
@@ -50,12 +88,8 @@
 
 /* Increase of emphasis */
 
-div {
-/* background: #efefef; */
- padding: 0.5rem;
-}
 
-.statement, main .statement {
+.statement, .multiview .statement {
  background-color: #fcfcfc;
 }
 
@@ -64,24 +98,42 @@ div {
  margin: 0.5rem;
 }
 
-#reader .statement {
- left: 10vw;
- width: 60%;
+.multiview {
+ font-size: 25px;
+ overflow-y: scroll;
+ margin: 0 auto;
 }
 
-main > .statement {
- width: 80%;
- margin: 0 auto;
+.multiview > .col {
+ overflow-y: scroll;
 }
 
 .statement .metadata, .statebox, summary {
  background: white;
 }
 
-.statebox, main .statement {
+.statebox, .multiview .statement {
  padding: 0.5rem;
  margin-top: 0.5rem;
  line-height: 1.75;
+}
+
+#envelope {
+ height: 90vh;
+ padding-left: 1rem;
+ padding-top: 1rem;
+}
+
+.barside {
+ right: 0;
+}
+.coder {
+ padding-top: 1rem;
+ padding-bottom: 1rem;
+ height: 70vh;
+}
+.navvy {
+ bottom: 0;
 }
 
 /* Highlights */
@@ -182,48 +234,25 @@ mark:hover .toltip, .toltip:hover {
 }
 
 /* [statementID].tsx */
-#reader .metadata {
+ .metadata {
  font-family: 'Victor Mono', 'Courier Prime', monospace;
 }
 
-#reader {
- overflow-y: hidden;
-}
-
-#reader #statebox {
- padding: 1.3rem;
-}
-
-#reader #nav {
- position: fixed;
- bottom: 5vh;
- right: 0;
-}
-
-#reader .statement {
- overflow-y: scroll;
- height: 80vh;
- width: 70vw;
- left: 5vw;
-}
-
-#coder {
+/* #coder {
  position: absolute;
  right: 0;
  top: 0;
  width: 25vw;
  font-size: 23px;
 }
-
 #codepick {
  position: fixed;
  background-color: #efefef;
  top: 0;
 }
-
 #codepick select {
  margin-top: 1rem;
-}
+} */
 
 .flagtracker {
  position: fixed;
