--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -53,7 +53,7 @@ body, html {
 /* Bottom bar codebook */ 
 
 .feet {
- width: 70vw;
+/* width: 70vw; */
  z-index: 2;
  bottom: 0;
  right: 0;
@@ -62,9 +62,46 @@ body, html {
  background: white;
 }
 
-#codebook {
+.navFoot, .flippers, #codebook  {
  z-index: 3;
  position: fixed;
+}
+.barside, .barmain {
+ display: flex;
+ flex-direction: column;
+ justify-content: space-between;
+ height: 100vh;
+ bottom: 0.5vh;
+}
+#flippers {
+ align-self: flex-end;
+ width: 100%;
+}
+#spacer {
+ flex-grow: 6;
+}
+#puase {
+ bottom: 0.5vh;
+ position: fixed;
+}
+#sparebtns {
+ display: flex;
+ flex-direction: column-reverse;
+ flex-grow: 0;
+ flex-wrap: nowrap;
+}
+.btnspace, #psace {
+ display: flex;
+ flex-direction: row-reverse;
+ justify-content: space-between;
+ position: relative;
+}
+
+.btn-group.btn-block {
+ display: flex;
+}
+.btn-group.btn-block > .btn {
+ flex: 1;
 }
 
 #glable, #glable td, #glable td *, #glable th, #glable th * {
@@ -74,6 +111,10 @@ body, html {
 #glable {
  background-color: white;
  position: relative;
+}
+
+.recode, .uncode {
+ margin-left: auto;
 }
 
 /* Sidebar flags */
@@ -120,7 +161,14 @@ body, html {
  padding: 0.5rem;
  margin-top: 0.5rem;
  line-height: 1.75;
+ font-size: 1.05rem;
 }
+
+/* This is broken in a very stupid way that will be fixed later or when I'm out of fucking Bootstrap, we'll see which 
+.flipper {
+ top: 59.5vh;
+ bottom: 0.5vh;
+}*/
 
 #envelope {
  height: 90vh;
@@ -134,7 +182,7 @@ body, html {
 .coder {
  padding-top: 1rem;
  padding-bottom: 1rem;
- height: 70vh;
+/* height: 70vh; */
 }
 .navvy {
  bottom: 0;
@@ -148,6 +196,7 @@ body, html {
 
 mark, mark * {
  font-family: 'Victor Mono', 'Courier Prime', monospace;
+ font-size: 0.95rem;
 }
 
 mark {
